fix: remove overflow:hidden from progressbar (issue: 37821)

--- a/scss/_progress.scss
+++ b/scss/_progress.scss
@@ -34,7 +34,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  overflow: hidden;
   color: var(--#{$prefix}progress-bar-color);
   text-align: center;
   white-space: nowrap;
